crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@37.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select '{[a,b), [b,e]}'::textmultirange;"
---
SelectStmt@0..40
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..39
    TypeCast@7..39
      AConst@7..23
        Sconst@7..23 "'{[a,b), [b,e]}'"
      Typecast@23..25 "::"
      TypeName@25..39
        Ident@25..39 "textmultirange"
  Ascii59@39..40 ";"

